--- a/public/index.html
+++ b/public/index.html
@@ -30,10 +30,10 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat&family=Noto+Sans&family=Plus+Jakarta+Sans:ital@1&family=Roboto&family=Sora&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Tac-bay</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="../src/index.js"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
