--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     <title>Tac-bay</title>
   </head>
   <body>
-    <script src="../src/index.js"></script>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
